# scx-manager

./: CMakeLists.txt  README.md  org.cachyos.scx-manager.desktop  scx_manager_locale.qrc
.github/workflows/: build.yml  checks.yml
cmake/: CPM.cmake  StandardProjectSettings.cmake  scxctl-ui-config.cmake.in
include/scx-manager/: schedext-window.hpp
lang/: scx-manager_bg.ts  scx-manager_ca.ts  scx-manager_cs.ts  scx-manager_de.ts  scx-manager_ja.ts  scx-manager_pl.ts  scx-manager_ru.ts  scx-manager_sk.ts  scx-manager_tr.ts
scx-rustlib/: Cargo.toml  build.rs  report.json
scx-rustlib/src/: lib.rs  utils.rs
src/: main.cpp  schedext-window-internal.cpp  schedext-window-internal.hpp  schedext-window.cpp  schedext-window.ui  scx_utils.cpp  scx_utils.hpp
